--- a/src/main/resources/templates/admin/places.html
+++ b/src/main/resources/templates/admin/places.html
@@ -1,13 +1,18 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Places</title>
+  <meta charset="UTF-8">
+  <meta name="viewport"
+        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Places</title>
 </head>
 <body>
-This is places page.
+<p>This is places page.</p>
+<ul>
+  <li>placeType: <span th:text="${placeType} ?: _">?</span></li>
+  <li>placeName: <span th:text="${placeName} ?: _">?</span></li>
+  <li>address: <span th:text="${address} ?: _">?</span></li>
+</ul>
 </body>
 </html>
