refactor: Event view

--- a/src/main/resources/templates/event/index.html
+++ b/src/main/resources/templates/event/index.html
@@ -1,17 +1,16 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Title</title>
+  <title>이벤트 리스트</title>
 </head>
 <body>
 <p>
   <span id="eventsTitle">This is events page.</span>
 </p>
-<table>
+<table id="eventsTable">
   <thead>
   <tr>
-    <th>이벤트 ID</th>
     <th>장소 ID</th>
     <th>이벤트명</th>
     <th>이벤트 상태</th>
@@ -24,15 +23,14 @@
   </thead>
   <tbody>
   <tr>
-    <td class="event-id">1</td>
-    <td class="place-id">1</td>
+    <td class="placeId">1</td>
     <td class="eventName">테스트 이벤트</td>
     <td class="eventStatus">OPENED</td>
-    <td class="eventStartDatetime">2023-01-01 09:00:00</td>
-    <td class="eventEndDatetime">2023-01-01 10:00:00</td>
+    <td class="eventStartDatetime">2021-01-01 09:00:00</td>
+    <td class="eventEndDatetime">2021-01-01 10:00:00</td>
     <td class="currentNumberOfPeople">0</td>
     <td class="capacity">10</td>
-    <td><a href="#">상세</a></td>
+    <td><a>상세</a></td>
   </tr>
   </tbody>
 </table>
