--- a/src/main/resources/templates/admin/places.html
+++ b/src/main/resources/templates/admin/places.html
@@ -1,18 +1,28 @@
-<!doctype html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<!DOCTYPE html>
+<html lang="ko">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport"
-        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Places</title>
+  <title>관리자 장소 리스트</title>
 </head>
 <body>
-<p>This is places page.</p>
-<ul>
-  <li>placeType: <span th:text="${placeType} ?: _">?</span></li>
-  <li>placeName: <span th:text="${placeName} ?: _">?</span></li>
-  <li>address: <span th:text="${address} ?: _">?</span></li>
-</ul>
+<p>
+  <span id="placesTitle">This is admin places page.</span>
+</p>
+<table id="placesTable">
+  <thead>
+  <tr>
+    <th>장소 이름</th>
+    <th>전화번호</th>
+    <th>상세</th>
+  </tr>
+  </thead>
+  <tbody>
+  <tr>
+    <td class="placeName">테스트 이벤트</td>
+    <td class="phoneNumber">0</td>
+    <td><a>상세</a></td>
+  </tr>
+  </tbody>
+</table>
 </body>
 </html>
